--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Try debug me</title>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <style>
+        *{
+            overflow-x: hidden;
+            overflow-y: hidden;
+        }
         body {
             font-family: 'Poppins';
             font-size: 22px;
