--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-size: 22px;
         }
     </style>
-    <script src="/antidbg.js"></script>
+    <script src="./antidbg.js"></script>
 
 </head>
 
