--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <style>
         *{
-            overflow-x: hidden;
-            overflow-y: hidden;
-        }
-        body {
             font-family: 'Poppins';
             font-size: 22px;
+            overflow: hidden;
         }
     </style>
-    <script src="./antidbg.js"></script>
+    <script src='./antidbg.js'></script>
 
 </head>
 
