--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow: hidden;
         }
     </style>
-    <script src='./antidbg.js'></script>
+    <script src='./antidbg.min.js'></script>
 
 </head>
 
